project android pronto

--- a/project-android.html/index.html
+++ b/project-android.html/index.html
@@ -117,7 +117,7 @@
             </article>
         </main>
         <footer>
-            <p>Site criado por <a href="https://www.youtube.com/@katsuedu" target="_blank">KatsuEdu</a> porque ele é foda!</p>
+            <p>Site criado por <a href="https://www.youtube.com/@katsuedu" target="_blank">&copy; KatsuEdu</a></p>
         </footer>
 </body>
 </html>
