--- a/password-generator/code/index.html
+++ b/password-generator/code/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <img class="logo" src="imagens/logo.png" alt="imagem da logo">
+    <img class="logo" src="../imagens/logo.png" alt="imagem da logo">
 
     <main class="container-input">
         <span>Tamanho
@@ -21,7 +21,7 @@
         <button class="button-cta" id="butoon" onclick="gerenatePassword()">Gerar senha</button>
     </main>
 
-    <div id="box-password" class="box-password a">
+    <div id="box-password" class="box-password hide">
         <span class="title">Sua senha foi gerada:</span>
         <span id="password" class="password" onclick="copyPassword()"></span>
         <span class="copy">Clique na senha para copiar 🦆</span>
